--- a/testScrollview/VideoFaqCollectionViewCell.xib
+++ b/testScrollview/VideoFaqCollectionViewCell.xib
@@ -2,7 +2,6 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -17,7 +16,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="VideoFaqCollectionViewCell" customModule="Con_Cung" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="VideoFaqCollectionViewCell" customModule="testScrollview" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="408" height="416"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -30,7 +29,7 @@
                             <constraint firstAttribute="width" secondItem="x2o-lj-CR0" secondAttribute="height" multiplier="408:416" id="bCg-rS-5d7"/>
                         </constraints>
                     </imageView>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Si3-0i-Wk7">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Rectangle 1559" translatesAutoresizingMaskIntoConstraints="NO" id="Si3-0i-Wk7">
                         <rect key="frame" x="0.0" y="0.0" width="408" height="259"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="Si3-0i-Wk7" secondAttribute="height" multiplier="408:259" id="taH-jq-yif"/>
@@ -183,10 +182,15 @@
                 <constraint firstItem="Si3-0i-Wk7" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="uST-Bf-iw5"/>
             </constraints>
             <size key="customSize" width="408" height="471"/>
+            <connections>
+                <outlet property="imageBackground" destination="Si3-0i-Wk7" id="kNu-ji-j4m"/>
+                <outlet property="imageBorderBG" destination="x2o-lj-CR0" id="Iyw-6u-nPn"/>
+            </connections>
             <point key="canvasLocation" x="204.58015267175571" y="134.85915492957747"/>
         </collectionViewCell>
     </objects>
     <resources>
+        <image name="Rectangle 1559" width="408" height="260"/>
         <image name="V4_Product_Love" width="30" height="30"/>
         <image name="V4_Share_Icon" width="18" height="18"/>
         <image name="iconEye" width="16" height="16.333333969116211"/>
