--- a/testScrollview/VideoDiscoveryLoadingCollectionViewCell.xib
+++ b/testScrollview/VideoDiscoveryLoadingCollectionViewCell.xib
@@ -4,7 +4,6 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -23,7 +22,7 @@
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
-            <color key="backgroundColor" systemColor="systemYellowColor"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="iew-W0-9EK" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="2rr-id-ILs"/>
                 <constraint firstAttribute="bottom" secondItem="iew-W0-9EK" secondAttribute="bottom" id="a7A-fe-HFB"/>
@@ -31,13 +30,13 @@
                 <constraint firstItem="iew-W0-9EK" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="wiS-9j-zM1"/>
             </constraints>
             <size key="customSize" width="311" height="473"/>
+            <connections>
+                <outlet property="imageBg" destination="iew-W0-9EK" id="4oJ-Lk-kyU"/>
+            </connections>
             <point key="canvasLocation" x="180.91603053435114" y="137.67605633802819"/>
         </collectionViewCell>
     </objects>
     <resources>
         <image name="Frame 38556" width="199" height="319"/>
-        <systemColor name="systemYellowColor">
-            <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
     </resources>
 </document>
